--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,29 @@
 name: Deploy to ECR
 
-on:
+on: 
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
+  
   build:
+    
     name: Build Image
     runs-on: ubuntu-latest
 
+   
     steps:
-    - name: Checkout code
+
+    - name: Check out code
       uses: actions/checkout@v2
 
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
       env:
-        AWS_ACCESS_KEY_ID: ASIAXDER47224ZHE6LXB
-        AWS_SECRET_ACCESS_KEY: JLvpQFoXzxoNj5013qKhejy8UxQe0U1mBbcD8Uo9
-        AWS_SESSION_TOKEN: FwoGZXIvYXdzEAoaDFzey2MWnVMNuilIZCLJARQ7Ks/ilmlZOS5SOA6zVwnkgQwtaP/TrMN7Yow0eiN3zUPEPAWcbaDtunWipPTaNYbSxkq6iG2wim07EitEkHvRRZl1hsI4UijenThV4Is4
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
         AWS_REGION: us-east-1
 
     - name: Build, test, tag, and push image to Amazon ECR
@@ -29,7 +33,13 @@ jobs:
         IMAGE_TAG: v0.1
       run: |
         cd Chapter02/kubia/
-        sed -i 's/Hello Kubernetes/rohan pamnani - 178266219/' main.go
         ls -ltra
+        # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        # Unit test
+        docker run -d -p 80:8080 --name nodeapp $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker ps
+        echo "Pause for 10 seconds to let container start"
+        sleep 10
+        curl localhost -vvv
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
